syntax = "proto3";

import "google/api/annotations.proto";

package com.book;

message Book {
    int64 isbn = 1;
    string title = 2;
    string author = 3;
}

message BookMap {
    repeated Book list = 1;
    repeated string key = 2;
}

message GetBookRequest {
    int64 isbn = 1;
}

message GetBookViaAuthor {
    string author = 1;
    repeated Book list = 2;
}

service BookService {
    rpc GetBook (GetBookRequest) returns (Book) {}
    rpc GetBooksViaAuthor (GetBookViaAuthor) returns (stream Book) {}
    rpc GetGreatestBook (stream GetBookRequest) returns (Book) {}
    rpc GetBooks (stream GetBookRequest) returns (stream Book) {}
}

// gPRC-getway Test
service BookApiService {
    rpc GetBook (GetBookRequest) returns (Book) {
        option (google.api.http) = {
            post: "/v1/getBook"
            body: "*"
        };
    }

    rpc GetBooksViaAuthor (GetBookViaAuthor) returns (BookMap) {
        option (google.api.http) = {
            post: "/v1/getBooksViaAuthor"
            body: "*"
        };
    }
}